[gd_scene load_steps=2 format=3 uid="uid://nmdfcxkmiodj"]

[ext_resource type="Script" path="res://Prog122d.gd" id="1_mc5ay"]

[node name="Prog122d" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mc5ay")

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 498.0

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 542.0
offset_right = 215.0
offset_bottom = 648.0
text = "Calculate"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 419.0
offset_top = 531.0
offset_right = 659.0
offset_bottom = 643.0
text = "Clear"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 900.0
offset_top = 526.0
offset_right = 1131.0
offset_bottom = 640.0
text = "Exit"

[connection signal="pressed" from="btnCalc" to="." method="_on_button_pressed"]
[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
